[gd_scene load_steps=48 format=2]

[ext_resource path="res://systems/map_system/ui_elements/map_creator/MapCreator.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Roboto/Roboto-Regular.ttf" type="FontFile" id=2]
[ext_resource path="res://assets/graphics/wiki_dashboard/x.svg" type="Texture2D" id=3]
[ext_resource path="res://assets/graphics/map/new map/uncheck_button.svg" type="Texture2D" id=4]
[ext_resource path="res://assets/graphics/map/new map/check_button.svg" type="Texture2D" id=5]
[ext_resource path="res://assets/graphics/map/new map/image.png" type="Texture2D" id=6]
[ext_resource path="res://assets/graphics/map/new map/text.png" type="Texture2D" id=7]
[ext_resource path="res://assets/graphics/map/new map/test_browse.png" type="Texture2D" id=8]
[ext_resource path="res://assets/graphics/map/new map/button_small.png" type="Texture2D" id=9]
[ext_resource path="res://assets/graphics/map/new map/button.png" type="Texture2D" id=10]
[ext_resource path="res://assets/graphics/map/new map/carbon_add.png" type="Texture2D" id=11]
[ext_resource path="res://assets/graphics/effects/BackgroundBlur.tscn" type="PackedScene" id=12]

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=42]
bg_color = Color( 0.219608, 0.564706, 0.886275, 1 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.203922, 0.203922, 0.203922, 1 )

[sub_resource type="FontFile" id=9]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=1]
default_font = SubResource( 9 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 42 )
CheckBox/constants/h_separation = 20
CheckBox/icons/checked = ExtResource( 5 )
CheckBox/icons/unchecked = ExtResource( 4 )
CheckBox/styles/disabled = SubResource( 10 )
CheckBox/styles/focus = SubResource( 11 )
CheckBox/styles/hover = SubResource( 12 )
CheckBox/styles/hover_pressed = SubResource( 13 )
CheckBox/styles/normal = SubResource( 14 )
CheckBox/styles/pressed = SubResource( 15 )
Label/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
LineEdit/styles/focus = SubResource( 6 )
LineEdit/styles/normal = SubResource( 7 )
Panel/styles/panel = SubResource( 8 )

[sub_resource type="Animation" id=41]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Layer/Control/PlaceHolder/MapCreator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( -557, -264 ) ]
}

[sub_resource type="Animation" id=39]
resource_name = "close"
length = 0.3
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0.3 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("EffectLayer/BackgroundBlur")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [  ],
"method": "unBlurBackground"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Layer/Control/PlaceHolder/MapCreator:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 0.3 ),
"transitions": PackedFloat32Array( -2, -2 ),
"update": 0,
"values": [ Vector2( -557, -264 ), Vector2( -557, 600 ) ]
}

[sub_resource type="Animation" id=40]
resource_name = "open"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Layer/Control/PlaceHolder/MapCreator:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.3 ),
"transitions": PackedFloat32Array( -2, -2 ),
"update": 0,
"values": [ Vector2( -557, 600 ), Vector2( -557, -264 ) ]
}

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=22]
content_margin_left = 10.0

[sub_resource type="StyleBoxFlat" id=35]
content_margin_left = 10.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 2
border_color = Color( 0.219608, 0.564706, 0.886275, 1 )
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 20
anti_aliasing_size = 1.0

[sub_resource type="StyleBoxEmpty" id=21]
content_margin_left = 15.0

[sub_resource type="StyleBoxEmpty" id=37]
content_margin_left = 10.0

[sub_resource type="StyleBoxFlat" id=36]
content_margin_left = 15.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 2
border_color = Color( 0.219608, 0.564706, 0.886275, 1 )
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxEmpty" id=24]
content_margin_left = 15.0

[sub_resource type="StyleBoxEmpty" id=25]

[sub_resource type="StyleBoxEmpty" id=26]

[sub_resource type="StyleBoxEmpty" id=27]

[sub_resource type="StyleBoxEmpty" id=28]

[sub_resource type="StyleBoxEmpty" id=29]

[sub_resource type="StyleBoxEmpty" id=34]
content_margin_left = 10.0

[sub_resource type="StyleBoxFlat" id=38]
content_margin_left = 10.0
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 2.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[node name="MapCreator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="EffectLayer" type="CanvasLayer" parent="."]

[node name="BackgroundBlur" parent="EffectLayer" instance=ExtResource( 12 )]
visible = true

[node name="Layer" type="CanvasLayer" parent="."]

[node name="Control" type="CenterContainer" parent="Layer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlaceHolder" type="Control" parent="Layer/Control"]
offset_left = 960.0
offset_top = 540.0
offset_right = 960.0
offset_bottom = 540.0

[node name="MapCreator" type="Panel" parent="Layer/Control/PlaceHolder"]
offset_left = -557.0
offset_top = -264.0
offset_right = 556.0
offset_bottom = 263.0
custom_minimum_size = Vector2( 1113, 527 )
pivot_offset = Vector2( 556, 263 )
theme = SubResource( 1 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Layer/Control/PlaceHolder/MapCreator"]
root_node = NodePath("../../../../..")
autoplay = "open"
anims/RESET = SubResource( 41 )
anims/close = SubResource( 39 )
anims/open = SubResource( 40 )

[node name="Button" type="Button" parent="Layer/Control/PlaceHolder/MapCreator"]
modulate = Color( 1, 1, 1, 0.627451 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 507.5
offset_top = -245.0
offset_right = 537.5
offset_bottom = -215.0
custom_minimum_size = Vector2( 30, 30 )
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
icon = ExtResource( 3 )
expand_icon = true

[node name="FileDialog" type="FileDialog" parent="Layer/Control/PlaceHolder/MapCreator"]
offset_left = 114.0
offset_top = 8.0
offset_right = 450.0
offset_bottom = 296.0
window_title = "Open a File or Directory"
resizable = true
dialog_hide_on_ok = true
mode = 3
access = 2
filters = PackedStringArray( "*.png", "*.jpg" )
current_dir = "/media/mayank/Assets1/Software Dev/world building software"
current_path = "/media/mayank/Assets1/Software Dev/world building software/"

[node name="HBoxContainer" type="HBoxContainer" parent="Layer/Control/PlaceHolder/MapCreator"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 40.0
offset_right = -30.0
offset_bottom = -30.0
custom_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer"]
offset_right = 580.0
offset_bottom = 457.0
custom_minimum_size = Vector2( 580, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer"]
offset_left = 5.0
offset_top = 39.0
offset_right = 575.0
offset_bottom = 417.0
custom_minimum_size = Vector2( 570, 378 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="CenterContainer2" type="CenterContainer" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer"]
offset_left = 580.0
offset_right = 1033.0
offset_bottom = 457.0
size_flags_horizontal = 3

[node name="InputField" type="VBoxContainer" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2"]
offset_left = 36.0
offset_top = 38.0
offset_right = 416.0
offset_bottom = 418.0
custom_minimum_size = Vector2( 380, 380 )
size_flags_horizontal = 3
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MapName" type="VBoxContainer" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField"]
offset_right = 380.0
offset_bottom = 74.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/MapName"]
offset_right = 380.0
offset_bottom = 19.0
custom_styles/normal = SubResource( 22 )
text = "name"

[node name="Input" type="Control" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/MapName"]
offset_top = 29.0
offset_right = 380.0
offset_bottom = 74.0
custom_minimum_size = Vector2( 0, 45 )

[node name="TextureRect" type="TextureRect" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/MapName/Input"]
offset_left = -24.5
offset_top = -20.0
offset_right = 404.5
offset_bottom = 75.0
texture = ExtResource( 7 )

[node name="LineEdit" type="LineEdit" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/MapName/Input"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/focus = SubResource( 35 )
custom_styles/normal = SubResource( 21 )
placeholder_text = "map name"

[node name="HBoxContainer2" type="HBoxContainer" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField"]
offset_top = 114.0
offset_right = 380.0
offset_bottom = 154.0
custom_minimum_size = Vector2( 0, 40 )

[node name="CheckBox" type="CheckBox" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/HBoxContainer2"]
offset_right = 150.0
offset_bottom = 40.0
custom_minimum_size = Vector2( 150, 0 )
mouse_default_cursor_shape = 2
custom_constants/h_separation = 10
text = "create article"
align = 1

[node name="MapTexture" type="VBoxContainer" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField"]
offset_top = 194.0
offset_right = 380.0
offset_bottom = 268.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/MapTexture"]
offset_right = 380.0
offset_bottom = 19.0
custom_styles/normal = SubResource( 37 )
text = "map texture"

[node name="HBoxContainer" type="HBoxContainer" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/MapTexture"]
offset_top = 29.0
offset_right = 380.0
offset_bottom = 74.0
custom_constants/separation = 20

[node name="Input" type="Control" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/MapTexture/HBoxContainer"]
offset_right = 257.0
offset_bottom = 45.0
custom_minimum_size = Vector2( 257, 45 )
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/MapTexture/HBoxContainer/Input"]
offset_left = -24.5
offset_top = -20.0
offset_right = 404.5
offset_bottom = 75.0
texture = ExtResource( 8 )

[node name="LineEdit" type="LineEdit" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/MapTexture/HBoxContainer/Input"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_styles/focus = SubResource( 36 )
custom_styles/normal = SubResource( 24 )
placeholder_text = "image path"

[node name="Control" type="Control" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/MapTexture/HBoxContainer"]
offset_left = 277.0
offset_right = 380.0
offset_bottom = 45.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/MapTexture/HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -20.0
offset_right = 25.0
offset_bottom = 30.0
texture = ExtResource( 9 )

[node name="Button" type="Button" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/MapTexture/HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2( 80, 0 )
custom_colors/font_color = Color( 0.145098, 0.145098, 0.145098, 1 )
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 26 )
custom_styles/focus = SubResource( 27 )
custom_styles/disabled = SubResource( 28 )
custom_styles/normal = SubResource( 29 )
text = "browse"

[node name="VBoxContainer3" type="VBoxContainer" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField"]
visible = false
offset_top = 194.0
offset_right = 526.0
offset_bottom = 246.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/VBoxContainer3"]
offset_right = 526.0
offset_bottom = 19.0
text = "chunlk size"

[node name="HBoxContainer" type="HBoxContainer" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/VBoxContainer3"]
offset_top = 23.0
offset_right = 526.0
offset_bottom = 52.0
custom_constants/separation = 30

[node name="ChunkX" type="SpinBox" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/VBoxContainer3/HBoxContainer"]
offset_right = 84.0
offset_bottom = 29.0
custom_minimum_size = Vector2( 80, 0 )
max_value = 2000.0
value = 512.0
suffix = "px"

[node name="Chunky" type="SpinBox" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/VBoxContainer3/HBoxContainer"]
offset_left = 114.0
offset_right = 198.0
offset_bottom = 29.0
custom_minimum_size = Vector2( 80, 0 )
max_value = 2000.0
value = 288.0
suffix = "px"

[node name="Label" type="Label" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/VBoxContainer3/HBoxContainer"]
offset_left = 295.0
offset_top = 5.0
offset_right = 396.0
offset_bottom = 24.0
size_flags_horizontal = 10
text = "chunk number"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit3" type="SpinBox" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/VBoxContainer3/HBoxContainer"]
offset_left = 426.0
offset_right = 526.0
offset_bottom = 29.0
custom_minimum_size = Vector2( 100, 0 )
size_flags_horizontal = 8
max_value = 5000.0

[node name="CreateButton" type="Control" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField"]
offset_top = 335.0
offset_right = 380.0
offset_bottom = 380.0
custom_minimum_size = Vector2( 0, 45 )
size_flags_horizontal = 3
size_flags_vertical = 14

[node name="TextureRect" type="TextureRect" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/CreateButton"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.5
offset_top = -20.0
offset_right = 24.5
offset_bottom = 75.0
texture = ExtResource( 10 )

[node name="CreateButton" type="Button" parent="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/CreateButton"]
anchor_right = 0.339474
anchor_bottom = 1.0
custom_minimum_size = Vector2( 80, 0 )
size_flags_horizontal = 10
size_flags_vertical = 10
custom_colors/font_color = Color( 0.203922, 0.203922, 0.203922, 1 )
custom_constants/h_separation = 10
custom_styles/hover = SubResource( 34 )
custom_styles/pressed = SubResource( 34 )
custom_styles/focus = SubResource( 34 )
custom_styles/disabled = SubResource( 38 )
custom_styles/normal = SubResource( 34 )
text = "create"
icon = ExtResource( 11 )
align = 0
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Layer/Control/PlaceHolder/MapCreator/Button" to="Layer/Control/PlaceHolder/MapCreator" method="hide_map_creator"]
[connection signal="file_selected" from="Layer/Control/PlaceHolder/MapCreator/FileDialog" to="Layer/Control/PlaceHolder/MapCreator" method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/MapTexture/HBoxContainer/Control/Button" to="Layer/Control/PlaceHolder/MapCreator" method="_on_Button_pressed"]
[connection signal="value_changed" from="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/VBoxContainer3/HBoxContainer/ChunkX" to="Layer/Control/PlaceHolder/MapCreator" method="_on_ChunkX_value_changed"]
[connection signal="value_changed" from="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/VBoxContainer3/HBoxContainer/Chunky" to="Layer/Control/PlaceHolder/MapCreator" method="_on_Chunky_value_changed"]
[connection signal="pressed" from="Layer/Control/PlaceHolder/MapCreator/HBoxContainer/CenterContainer2/InputField/CreateButton/CreateButton" to="Layer/Control/PlaceHolder/MapCreator" method="_on_CreateButton_pressed"]
